added new courses

--- a/education.html
+++ b/education.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Personal website">
 		<meta name="author" content="Ayah Ramahi">
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
-		
+
 		<title>Ayah Ramahi</title>
 
 		<!-- fonts -->
@@ -26,11 +26,13 @@
 			<li>Digital Logic (team of 2, <a href="https://drive.google.com/open?id=14SOiOJwY7c4vmsEe12OWG1zndj33bFbm" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
 		</ul>
 		<p class="desc">In Computer Organization course we were asked to create a research paper &#128220 about some subject, <a href="https://drive.google.com/file/d/1OXKSyzNXm4_e0FPuDkg-iiIUP7t90tjr/view?usp=sharing" target="_blank" style="background-color:rgb(184, 38, 38)">mine</a> talked about IBM Q System One, the new quantum computer by IBM.</p>
-	
+
 		<h3>Online Learning &#128187</h3>
 		<p class="desc">I took several online courses on many platforms, like: <a href="https://www.edx.org/" target="_blank" style="background-color:rgb(184, 38, 103);">Edx</a> and <a href="https://www.coursera.org/" target="_blank" style="background-color:rgb(61, 137, 201)">Coursera</a>, which are: </p>
 		<ul>
 			<li>Learning how to learn (McMaster University & University of California San Diego)</li>
+			<li>Machine Learning with Python (IBM, <a href="https://www.coursera.org/account/accomplishments/certificate/SGAVDE33AB65" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+			<li>Applied Machine Learning in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/VPZAW4SARGK2" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
 			<li>CS50 Web Development Using Python and Javascript (Harvard, <a href="" target="_blank" style="background-color:rgb(230, 209, 255)">final project</a>)</li>
 			<li>Introduction to Data Science in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/7ZHE3A5DPNNS" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
 			<li>Interactivity With Javascript (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/TY34TMRUVRGK" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
