--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 		</div>
 
 		<h3>Chit-Chat 💬 ( <a href="https://github.com/AyahRamahi/Chit-Chat" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
-		<p>Made using Flask, Chit-Chat is a website used to create chat rooms with no need to register for an account, and chat to others on these rooms. </p>
+		<p>Made using Flask, Chit-Chat is a website used to create chat rooms with no need to register for an account, and chat with others on these rooms. </p>
 		<div class="tags">
 			<i style="background-color:rgb(224, 159, 152);">Flask</i>
 			<i style="background-color:rgb(55, 118, 171);">Python</i>
