--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Personal website">
 		<meta name="author" content="Ayah Ramahi">
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
-		
+
 		<title>Ayah Ramahi</title>
 
 		<!-- fonts -->
@@ -16,6 +16,20 @@
 
 	</head>
 	<body>
+		<h3>MusicDB &#127932
+			( <a href="https://github.com/AyahRamahi/music-web" target="_blank" style="background-color:rgb(202, 214, 197);">Frontend</a>
+			<a href="https://github.com/AyahRamahi/music-api" target="_blank" style="background-color:rgb(202, 214, 197);"> Backend</a> )</h3>
+		<p>Created for an internship using Django for backend, React for frontend, with GraphQL in between, this is a website that records albums, singers, and songs. </p>
+		<div class="tags">
+			<i style="background-color:rgb(68, 183, 139);">Django</i>
+			<i style="background-color:rgb(55, 118, 171);">Python</i>
+			<i style="background-color:rgb(225, 0, 152);">GraphQL</i>
+			<i style="background-color:rgb(97, 218, 251);">React JS</i>
+			<i style="background-color:rgb(86, 61, 124);">Bootstrap</i>
+			<i style="background-color:rgb(241, 101, 40);">HTML</i>
+			<i style="background-color:rgb(27, 131, 190);">CSS</i>
+		</div>
+
 		<h3>Quotr &#128221 ( <a href="https://github.com/AyahRamahi/quotr" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
 		<p>Made using Flask, Quotr is a quotes-sharing website. A user can sign-up for an account, then login-in to it, then they can add their favorite quotes and who said them. On the home screen, a random quote from all the added ones by users is showed. </p>
 		<div class="tags">
