added icons bar

--- a/index.html
+++ b/index.html
@@ -11,13 +11,28 @@
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+		<!-- icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- personal styling -->
 		<link href="assets/index-css.css" rel="stylesheet">
+		<link href="assets/general-css.css" rel="stylesheet">
 		<!-- quotes -->
 		<script type="text/javascript" src="assets/quotes.js"></script>
 
 	</head>
 	<body>
+		<div class="icon-bar">
+		  <a href="https://github.com/AyahRamahi" target="_blank" class="github">
+				<i class="fa fa-github"></i>
+			</a>
+		  <a href="https://www.linkedin.com/in/ayah-ramahi/" target="_blank" class="linkedin">
+				<i class="fa fa-linkedin"></i>
+			</a>
+			<a href="mailto:ayah_alramahi@yahoo.com" target="_blank" class="mail">
+				<i class="fa fa-envelope-o"></i>
+			</a>
+		</div>
+
 		<div class="content">
 			<p class="name">Ayah Ramahi</p>
 			<div class="emoji">
@@ -38,19 +53,5 @@
 				<i><a style="color:#bc9ff9;" href="about.html">About</a></i>
 			</div>
 		</div>
-		<div class="social">
-	        <a href="mailto:ayah_alramahi@yahoo.com" target="_blank">
-	        	<i class="fas fa-envelope"></i>
-	        </a>
-		    <a href="https://web.facebook.com/ayah.alramahi" target="_blank">
-		   		<i class="fab fa-facebook-f"></i>
-		    </a>
-		    <a href="https://github.com/AyahRamahi" target="_blank">
-		     	<i class="fab fa-github"></i>
-		    </a>
-		    <a href="https://www.goodreads.com/user/show/27668254-ayah-al-ramahi" target="_blank">
-		    	<i class="fab fa-goodreads-g"></i>
-		    </a>
-        </div>
 	</body>
 </html>
