--- a/education.html
+++ b/education.html
@@ -10,35 +10,51 @@
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
-
+		<!-- icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- personal styling -->
 		<link href="assets/education-css.css" rel="stylesheet">
+		<link href="assets/general-css.css" rel="stylesheet">
 
 	</head>
 	<body>
-		<h3>BSc Computer Engineering &#128218 @ <a href="http://ju.edu.jo/home.aspx" target="_blank" style="background-color:rgb(1, 162, 166);">University of Jordan</a></h3>
-		<p>Final projects of some courses:</p>
-		<ul class="projects">
-			<li>Introduction to Database (team of 4, <a href="https://drive.google.com/open?id=1b92RdsX7wNPOBBL7HjAA_VQaVYiZOLq5" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
-			<li>Computer Organization (team of 2, <a href="https://drive.google.com/file/d/1cvz9XqtLRudT2wuIYBdXV3K7yqSoy9kx/view?usp=sharing" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
-			<li>Embedded Systems (team of 2, <a href="https://drive.google.com/open?id=1mBSHr_UsgoxHWvfniOoxS0wP9bQo4H9M" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
-			<li>Data Structures (team of 3, <a href="https://drive.google.com/file/d/1xm0k8Ez7vGcThmRKn2CoOgyP6wPT8epb/view?usp=sharing" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
-			<li>Digital Logic (team of 2, <a href="https://drive.google.com/open?id=14SOiOJwY7c4vmsEe12OWG1zndj33bFbm" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
-		</ul>
-		<p class="desc">In Computer Organization course we were asked to create a research paper &#128220 about some subject, <a href="https://drive.google.com/file/d/1OXKSyzNXm4_e0FPuDkg-iiIUP7t90tjr/view?usp=sharing" target="_blank" style="background-color:rgb(184, 38, 38)">mine</a> talked about IBM Q System One, the new quantum computer by IBM.</p>
+		<div class="icon-bar">
+		  <a href="https://github.com/AyahRamahi" target="_blank" class="github">
+				<i class="fa fa-github"></i>
+			</a>
+		  <a href="https://www.linkedin.com/in/ayah-ramahi/" target="_blank" class="linkedin">
+				<i class="fa fa-linkedin"></i>
+			</a>
+			<a href="mailto:ayah_alramahi@yahoo.com" target="_blank" class="mail">
+				<i class="fa fa-envelope-o"></i>
+			</a>
+		</div>
 
-		<h3>Online Learning &#128187</h3>
-		<p class="desc">I took several online courses on many platforms, like: <a href="https://www.edx.org/" target="_blank" style="background-color:rgb(184, 38, 103);">Edx</a> and <a href="https://www.coursera.org/" target="_blank" style="background-color:rgb(61, 137, 201)">Coursera</a>, which are: </p>
-		<ul>
-			<li>Learning how to learn (McMaster University & University of California San Diego)</li>
-			<li>Machine Learning with Python (IBM, <a href="https://www.coursera.org/account/accomplishments/certificate/SGAVDE33AB65" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
-			<li>Applied Machine Learning in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/VPZAW4SARGK2" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
-			<li>CS50 Web Development Using Python and Javascript (Harvard, <a href="" target="_blank" style="background-color:rgb(230, 209, 255)">final project</a>)</li>
-			<li>Introduction to Data Science in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/7ZHE3A5DPNNS" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
-			<li>Interactivity With Javascript (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/TY34TMRUVRGK" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
-			<li>Python Data Structres (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/JV9VLBXERHFV" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
-			<li>Nand to Tetris I (<a href="https://www.coursera.org/account/accomplishments/certificate/89QXLW9LXDM8" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
-		</ul>
+		<div class="content">
+			<h3>BSc Computer Engineering &#128218 @ <a href="http://ju.edu.jo/home.aspx" target="_blank" style="background-color:rgb(1, 162, 166);">University of Jordan</a></h3>
+			<p>Final projects of some courses:</p>
+			<ul class="projects">
+				<li>Introduction to Database (team of 4, <a href="https://drive.google.com/open?id=1b92RdsX7wNPOBBL7HjAA_VQaVYiZOLq5" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+				<li>Computer Organization (team of 2, <a href="https://drive.google.com/file/d/1cvz9XqtLRudT2wuIYBdXV3K7yqSoy9kx/view?usp=sharing" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+				<li>Embedded Systems (team of 2, <a href="https://drive.google.com/open?id=1mBSHr_UsgoxHWvfniOoxS0wP9bQo4H9M" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+				<li>Data Structures (team of 3, <a href="https://drive.google.com/file/d/1xm0k8Ez7vGcThmRKn2CoOgyP6wPT8epb/view?usp=sharing" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+				<li>Digital Logic (team of 2, <a href="https://drive.google.com/open?id=14SOiOJwY7c4vmsEe12OWG1zndj33bFbm" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+			</ul>
+			<p class="desc">In Computer Organization course we were asked to create a research paper &#128220 about some subject, <a href="https://drive.google.com/file/d/1OXKSyzNXm4_e0FPuDkg-iiIUP7t90tjr/view?usp=sharing" target="_blank" style="background-color:rgb(184, 38, 38)">mine</a> talked about IBM Q System One, the new quantum computer by IBM.</p>
+
+			<h3>Online Learning &#128187</h3>
+			<p class="desc">I took several online courses on many platforms, like: <a href="https://www.edx.org/" target="_blank" style="background-color:rgb(184, 38, 103);">Edx</a> and <a href="https://www.coursera.org/" target="_blank" style="background-color:rgb(61, 137, 201)">Coursera</a>, which are: </p>
+			<ul>
+				<li>Learning how to learn (McMaster University & University of California San Diego)</li>
+				<li>Machine Learning with Python (IBM, <a href="https://www.coursera.org/account/accomplishments/certificate/SGAVDE33AB65" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+				<li>Applied Machine Learning in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/VPZAW4SARGK2" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+				<li>CS50 Web Development Using Python and Javascript (Harvard, <a href="" target="_blank" style="background-color:rgb(230, 209, 255)">final project</a>)</li>
+				<li>Introduction to Data Science in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/7ZHE3A5DPNNS" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+				<li>Interactivity With Javascript (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/TY34TMRUVRGK" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+				<li>Python Data Structres (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/JV9VLBXERHFV" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+				<li>Nand to Tetris I (<a href="https://www.coursera.org/account/accomplishments/certificate/89QXLW9LXDM8" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+			</ul>
+		</div>
 		<h1 style="text-align: center;">&#10024</h1>
 	</body>
 </html>
