--- a/projects.html
+++ b/projects.html
@@ -10,56 +10,72 @@
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
-
+		<!-- icons -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- personal styling -->
 		<link href="assets/projects-css.css" rel="stylesheet">
+		<link href="assets/general-css.css" rel="stylesheet">
 
 	</head>
 	<body>
-		<h3>MusicDB &#127932
-			( <a href="https://github.com/AyahRamahi/music-web" target="_blank" style="background-color:rgb(202, 214, 197);">Frontend</a>
-			<a href="https://github.com/AyahRamahi/music-api" target="_blank" style="background-color:rgb(202, 214, 197);"> Backend</a> )</h3>
-		<p>Created for an internship using Django for backend, React for frontend, with GraphQL in between, this is a website that records albums, singers, and songs. </p>
-		<div class="tags">
-			<i style="background-color:rgb(68, 183, 139);">Django</i>
-			<i style="background-color:rgb(55, 118, 171);">Python</i>
-			<i style="background-color:rgb(225, 0, 152);">GraphQL</i>
-			<i style="background-color:rgb(97, 218, 251);">React JS</i>
-			<i style="background-color:rgb(86, 61, 124);">Bootstrap</i>
-			<i style="background-color:rgb(241, 101, 40);">HTML</i>
-			<i style="background-color:rgb(27, 131, 190);">CSS</i>
+		<div class="icon-bar">
+		  <a href="https://github.com/AyahRamahi" target="_blank" class="github">
+				<i class="fa fa-github"></i>
+			</a>
+		  <a href="https://www.linkedin.com/in/ayah-ramahi/" target="_blank" class="linkedin">
+				<i class="fa fa-linkedin"></i>
+			</a>
+			<a href="mailto:ayah_alramahi@yahoo.com" target="_blank" class="mail">
+				<i class="fa fa-envelope-o"></i>
+			</a>
 		</div>
 
-		<h3>Quotr &#128221 ( <a href="https://github.com/AyahRamahi/quotr" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
-		<p>Made using Flask, Quotr is a quotes-sharing website. A user can sign-up for an account, then login-in to it, then they can add their favorite quotes and who said them. On the home screen, a random quote from all the added ones by users is showed. </p>
-		<div class="tags">
-			<i style="background-color:rgb(224, 159, 152);">Flask</i>
-			<i style="background-color:rgb(55, 118, 171);">Python</i>
-			<i style="background-color:rgb(232, 91, 70);">SQLAlchemy</i>
-			<i style="background-color:rgb(51, 103, 145);">PostgreSQL</i>
-			<i style="background-color:rgb(241, 101, 40);">HTML</i>
-			<i style="background-color:rgb(27, 131, 190);">CSS</i>
-		</div>
+		<div class="content">
+			<h3>MusicDB &#127932
+				( <a href="https://github.com/AyahRamahi/music-web" target="_blank" style="background-color:rgb(202, 214, 197);">Frontend</a>
+				<a href="https://github.com/AyahRamahi/music-api" target="_blank" style="background-color:rgb(202, 214, 197);"> Backend</a> )</h3>
+			<p>Created for an internship using Django for backend, React for frontend, with GraphQL in between, this is a website that records albums, singers, and songs. </p>
+			<div class="tags">
+				<i style="background-color:rgb(68, 183, 139);">Django</i>
+				<i style="background-color:rgb(55, 118, 171);">Python</i>
+				<i style="background-color:rgb(225, 0, 152);">GraphQL</i>
+				<i style="background-color:rgb(97, 218, 251);">React JS</i>
+				<i style="background-color:rgb(86, 61, 124);">Bootstrap</i>
+				<i style="background-color:rgb(241, 101, 40);">HTML</i>
+				<i style="background-color:rgb(27, 131, 190);">CSS</i>
+			</div>
 
-		<h3>A-Read &#128218 ( <a href="https://github.com/AyahRamahi/A-Read" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
-		<p>Made using Flask, A-Read is a website to rate books and give reviews about them. A user can search for books in the database, give rates, add reviews and read others users reviews. A Goodreads API was used to give a json file that has a books information gives its ISBN.</p>
-		<div class="tags">
-			<i style="background-color:rgb(224, 159, 152);">Flask</i>
-			<i style="background-color:rgb(55, 118, 171);">Python</i>
-			<i style="background-color:rgb(232, 91, 70);;">SQLAlchemy</i>
-			<i style="background-color:rgb(51, 103, 145);;">PostgreSQL</i>
-			<i style="background-color:rgb(241, 101, 40);">HTML</i>
-			<i style="background-color:rgb(27, 131, 190);">CSS</i>
-			<i style="background-color:rgb(245, 243, 236);">Goodreads API</i>
-		</div>
+			<h3>Quotr &#128221 ( <a href="https://github.com/AyahRamahi/quotr" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
+			<p>Made using Flask, Quotr is a quotes-sharing website. A user can sign-up for an account, then login-in to it, then they can add their favorite quotes and who said them. On the home screen, a random quote from all the added ones by users is showed. </p>
+			<div class="tags">
+				<i style="background-color:rgb(224, 159, 152);">Flask</i>
+				<i style="background-color:rgb(55, 118, 171);">Python</i>
+				<i style="background-color:rgb(232, 91, 70);">SQLAlchemy</i>
+				<i style="background-color:rgb(51, 103, 145);">PostgreSQL</i>
+				<i style="background-color:rgb(241, 101, 40);">HTML</i>
+				<i style="background-color:rgb(27, 131, 190);">CSS</i>
+			</div>
 
-		<h3>Chit-Chat 💬 ( <a href="https://github.com/AyahRamahi/Chit-Chat" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
-		<p>Made using Flask, Chit-Chat is a website used to create chat rooms with no need to register for an account, and chat with others on these rooms. </p>
-		<div class="tags">
-			<i style="background-color:rgb(224, 159, 152);">Flask</i>
-			<i style="background-color:rgb(55, 118, 171);">Python</i>
-			<i style="background-color:rgb(242, 234, 145);">Socket.IO</i>
-			<i style="background-color:rgb(241, 101, 40);">HTML</i>
+			<h3>A-Read &#128218 ( <a href="https://github.com/AyahRamahi/A-Read" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
+			<p>Made using Flask, A-Read is a website to rate books and give reviews about them. A user can search for books in the database, give rates, add reviews and read others users reviews. A Goodreads API was used to give a json file that has a books information gives its ISBN.</p>
+			<div class="tags">
+				<i style="background-color:rgb(224, 159, 152);">Flask</i>
+				<i style="background-color:rgb(55, 118, 171);">Python</i>
+				<i style="background-color:rgb(232, 91, 70);;">SQLAlchemy</i>
+				<i style="background-color:rgb(51, 103, 145);;">PostgreSQL</i>
+				<i style="background-color:rgb(241, 101, 40);">HTML</i>
+				<i style="background-color:rgb(27, 131, 190);">CSS</i>
+				<i style="background-color:rgb(245, 243, 236);">Goodreads API</i>
+			</div>
+
+			<h3>Chit-Chat 💬 ( <a href="https://github.com/AyahRamahi/Chit-Chat" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
+			<p>Made using Flask, Chit-Chat is a website used to create chat rooms with no need to register for an account, and chat with others on these rooms. </p>
+			<div class="tags">
+				<i style="background-color:rgb(224, 159, 152);">Flask</i>
+				<i style="background-color:rgb(55, 118, 171);">Python</i>
+				<i style="background-color:rgb(242, 234, 145);">Socket.IO</i>
+				<i style="background-color:rgb(241, 101, 40);">HTML</i>
+			</div>
 		</div>
 		<h1 style="text-align: center;">&#10024</h1>
 	</body>
