--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			</div>
 			<p class="desc" id="quote"></p>
 			<div class="bar">
-				<i><a style="color:#1f8eef;" href="projects.html">Projects</a></i>
-				<i><a style="color:#ef1e37;" href="education.html">Education</a></i>
-				<i><a style="color:#bc9ff9;" href="about.html">About</a></i>
+				<i class="zoom"><a style="color:#1f8eef;" href="projects.html">Projects</a></i>
+				<i class="zoom"><a style="color:#ef1e37;" href="education.html">Education</a></i>
+				<i class="zoom"><a style="color:#bc9ff9;" href="about.html">About</a></i>
 			</div>
 		</div>
 	</body>
