fixed icons links and vertical horizontal center

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<!-- icons -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- personal styling -->
-		<link href="assets/css/index-css.css" rel="stylesheet">
-		<link href="assets/css/general-css.css" rel="stylesheet">
+		<link href="assets/css/index.css" rel="stylesheet">
+		<link href="assets/css/general.css" rel="stylesheet">
 		<!-- quotes -->
 		<script type="text/javascript" src="assets/js/quotes.js"></script>
 
