--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 		<!-- icons -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- personal styling -->
-		<link href="assets/css/about-css.css" rel="stylesheet">
-		<link href="assets/css/general-css.css" rel="stylesheet">
+		<link href="assets/css/about.css" rel="stylesheet">
+		<link href="assets/css/general.css" rel="stylesheet">
 
 	</head>
 	<body>
