--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="google-site-verification" content="13aj4lNzg1cB0TJk-985k6qfR1GvdO-_4qccLK-Sbg8" />
 		<title>Ayah Ramahi</title>
 
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165069438-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-165069438-1');
+		</script>
+
+
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
