--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,16 @@
 
 		<title>Ayah Ramahi</title>
 
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165069438-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-165069438-1');
+		</script>
+
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 		<!-- icons -->
