added zoom effect

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 				<i>&#128747</i>
 			</div>
 			<div class="bar">
-				<i><a style="color:#1f8eef;" href="projects.html">Projects</a></i>
-				<i><a style="color:#ef1e37;" href="education.html">Education</a></i>
-				<i><a style="color:#bc9ff9;" href="about.html">About</a></i>
+				<div class="zoom router"><a style="color:#1f8eef;" href="projects.html">Projects</a></div>
+				<div class="zoom router"><a style="color:#ef1e37;" href="education.html">Education</a></div>
+				<div class="zoom router"><a style="color:#bc9ff9;" href="about.html">About</a></div>
 			</div>
 			<!--
 			<p class="desc" id="quote"></p>
