--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
 	</head>
 	<body id="main-background">
 		<div class="icon-bar">
-		  <a href="https://github.com/AyahRamahi" target="_blank" class="github">
+		  <a title="GitHub" href="https://github.com/AyahRamahi" target="_blank" class="github">
 				<i class="fa fa-github"></i>
 			</a>
-		  <a href="https://www.linkedin.com/in/ayah-ramahi/" target="_blank" class="linkedin">
+		  <a title="LinkedIn" href="https://www.linkedin.com/in/ayah-ramahi/" target="_blank" class="linkedin">
 				<i class="fa fa-linkedin"></i>
 			</a>
-			<a href="mailto:ayah_alramahi@yahoo.com" target="_blank" class="mail">
+			<a title="ayah_alramahi@yahoo.com" href="mailto:ayah_alramahi@yahoo.com" target="_blank" class="mail">
 				<i class="fa fa-envelope-o"></i>
+			</a>
+			<a title="GitHub Campus Expert" href="https://githubcampus.expert/AyahRamahi/" target="_blank" class="">
+				<i class="fa fa-flag"></i>
 			</a>
 		</div>
 
