--- a/education.html
+++ b/education.html
@@ -38,6 +38,9 @@
 			<a href="mailto:ayah_alramahi@yahoo.com" target="_blank" class="mail">
 				<i class="fa fa-envelope-o"></i>
 			</a>
+			<a title="GitHub Campus Expert" href="https://githubcampus.expert/AyahRamahi/" target="_blank" class="">
+				<i class="fa fa-flag"></i>
+			</a>
 		</div>
 
 		<div class="content">
