fixed icons line

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Personal website">
-		<meta name="author" content="Ayah Ramahi">
+		<meta name="author" content="Ayah Al-Ramahi">
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
-    <meta name="google-site-verification" content="13aj4lNzg1cB0TJk-985k6qfR1GvdO-_4qccLK-Sbg8" />
+    	<meta name="google-site-verification" content="13aj4lNzg1cB0TJk-985k6qfR1GvdO-_4qccLK-Sbg8" />
 		<title>Ayah Ramahi</title>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
