updated projects page

--- a/projects.html
+++ b/projects.html
@@ -44,10 +44,22 @@
 		</div>
 
 		<div class="content">
+			<h3>CMS &#128203	
+				( <a href="https://github.com/AyahRamahi/cms" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a>)</h3>
+			<p>A website that allows users to share online courses, allow users to register, login, enroll in courses, and save their progress.</p>
+			<div class="tags">
+				<i style="background-color:rgb(224, 159, 152);">Flask</i>
+				<i style="background-color:rgb(55, 118, 171);">Python</i>
+				<i style="background-color:rgb(86, 61, 124);">Bootstrap</i>
+				<i style="background-color:rgb(241, 101, 40);">HTML</i>
+				<i style="background-color:rgb(27, 131, 190);">CSS</i>
+				<i style="background-color:rgb(19,170,82);">MongoDB</i>
+			</div>
+			
 			<h3>MusicDB &#127932
 				( <a href="https://github.com/AyahRamahi/music-web" target="_blank" style="background-color:rgb(202, 214, 197);">Frontend</a>
 				<a href="https://github.com/AyahRamahi/music-api" target="_blank" style="background-color:rgb(202, 214, 197);"> Backend</a> )</h3>
-			<p>Created for an internship using Django for backend, React for frontend, with GraphQL in between, this is a website that records albums, singers, and songs. </p>
+			<p>Created using Django for backend, React for frontend, with GraphQL in between, this is a website that records albums, singers, and songs. </p>
 			<div class="tags">
 				<i style="background-color:rgb(68, 183, 139);">Django</i>
 				<i style="background-color:rgb(55, 118, 171);">Python</i>
