--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en dir=auto><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name=robots content="index, follow"><title>About | Ayah Al-Ramahi</title><meta name=keywords content><meta name=description content="Hi! My name is Ayah. A computer engineering student at the the University of Jordan. I write code, read, think, and try to have fun while doing that.
+<!doctype html><html lang=en dir=auto><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name=robots content="index, follow"><title>About | Ayah Al-Ramahi</title><meta name=keywords content><meta name=description content="Hi! My name is Ayah.
  Experience Amazon.com - Software Development Engineering Intern
 Aug – Nov 2020, Jordan
 Beyond Limits AI - Front End Software Engineering Intern
